@@ -18,10 +18,10 @@
 
 package org.apache.storm;
 
-import java.lang.reflect.InvocationTargetException;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.HashMap;
 import java.util.LinkedList;
 import java.util.List;
@@ -62,22 +62,19 @@ import org.apache.storm.validation.ConfigValidationAnnotations.IsNoDuplicateInLi
 import org.apache.storm.validation.ConfigValidationAnnotations.IsString;
 import org.apache.storm.validation.ConfigValidationAnnotations.NotNull;
 
-import org.junit.Assert;
-import org.junit.Test;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
+import org.junit.jupiter.api.Test;
 
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.when;
 
 public class TestConfigValidate {
 
-    private static final Logger LOG = LoggerFactory.getLogger(TestConfigValidate.class);
-
     @Test
-    public void validPacemakerAuthTest() throws InstantiationException, IllegalAccessException, NoSuchFieldException, NoSuchMethodException,
-        InvocationTargetException {
-        Map<String, Object> conf = new HashMap<String, Object>();
+    public void validPacemakerAuthTest() {
+        Map<String, Object> conf = new HashMap<>();
         conf.put(Config.PACEMAKER_AUTH_METHOD, "NONE");
         ConfigValidation.validateFields(conf);
         conf.put(Config.PACEMAKER_AUTH_METHOD, "DIGEST");
@@ -86,20 +83,16 @@ public class TestConfigValidate {
         ConfigValidation.validateFields(conf);
     }
 
-    @Test(expected = IllegalArgumentException.class)
-    public void invalidPacemakerAuthTest() throws InstantiationException, IllegalAccessException, NoSuchFieldException,
-        NoSuchMethodException, InvocationTargetException {
-        Map<String, Object> conf = new HashMap<String, Object>();
+    @Test
+    public void invalidPacemakerAuthTest() {
+        Map<String, Object> conf = new HashMap<>();
         conf.put(Config.PACEMAKER_AUTH_METHOD, "invalid");
-        ConfigValidation.validateFields(conf);
+        assertThrows(IllegalArgumentException.class, () -> ConfigValidation.validateFields(conf));
     }
 
     @Test
-    public void validConfigTest() throws InstantiationException, IllegalAccessException, NoSuchFieldException, NoSuchMethodException,
-        InvocationTargetException {
-
-
-        Map<String, Object> conf = new HashMap<String, Object>();
+    public void validConfigTest() {
+        Map<String, Object> conf = new HashMap<>();
         conf.put(Config.STORM_MESSAGING_NETTY_SOCKET_BACKLOG, 5);
         conf.put(Config.STORM_MESSAGING_NETTY_MIN_SLEEP_MS, 500);
         conf.put(Config.STORM_MESSAGING_NETTY_AUTHENTICATION, true);
@@ -107,24 +100,22 @@ public class TestConfigValidate {
         ConfigValidation.validateFields(conf);
     }
 
-    @Test(expected = IllegalArgumentException.class)
-    public void invalidConfigTest() throws InvocationTargetException, NoSuchMethodException, NoSuchFieldException, InstantiationException,
-        IllegalAccessException {
-        Map<String, Object> conf = new HashMap<String, Object>();
+    @Test
+    public void invalidConfigTest() {
+        Map<String, Object> conf = new HashMap<>();
         conf.put(Config.STORM_MESSAGING_NETTY_SOCKET_BACKLOG, 5);
         conf.put(Config.STORM_MESSAGING_NETTY_MIN_SLEEP_MS, 500);
         conf.put(Config.STORM_MESSAGING_NETTY_AUTHENTICATION, "invalid");
 
-        ConfigValidation.validateFields(conf);
+        assertThrows(IllegalArgumentException.class, () -> ConfigValidation.validateFields(conf));
     }
 
-    @Test(expected = InvalidTopologyException.class)
-    public void testValidateTopologyBlobStoreMapWithBlobStore() throws InvalidTopologyException, AuthorizationException,
-        KeyNotFoundException {
+    @Test
+    public void testValidateTopologyBlobStoreMapWithBlobStore() throws Throwable {
         Map<String, Object> topoConf = new HashMap<>();
-        Map<String, Map> topologyMap = new HashMap<>();
-        topologyMap.put("key1", new HashMap<String, String>());
-        topologyMap.put("key2", new HashMap<String, String>());
+        Map<String, Map<String, String>> topologyMap = new HashMap<>();
+        topologyMap.put("key1", new HashMap<>());
+        topologyMap.put("key2", new HashMap<>());
         topoConf.put(Config.TOPOLOGY_BLOBSTORE_MAP, topologyMap);
         Subject subject = ReqContext.context().subject();
 
@@ -132,30 +123,31 @@ public class TestConfigValidate {
         when(blobStoreMock.getBlobMeta("key1", subject)).thenReturn(null);
         when(blobStoreMock.getBlobMeta("key2", subject)).thenThrow(new KeyNotFoundException());
 
-        Utils.validateTopologyBlobStoreMap(topoConf, blobStoreMock);
+        assertThrows(InvalidTopologyException.class,
+            () -> Utils.validateTopologyBlobStoreMap(topoConf, blobStoreMock));
     }
 
-    @Test(expected = InvalidTopologyException.class)
-    public void testValidateTopologyBlobStoreMissingKey() throws InvalidTopologyException, AuthorizationException,
-        KeyNotFoundException {
+    @Test
+    public void testValidateTopologyBlobStoreMissingKey() throws Throwable {
         Map<String, Object> topoConf = new HashMap<>();
-        Map<String, Map> topologyMap = new HashMap<>();
-        topologyMap.put("key1", new HashMap<String, String>());
-        topologyMap.put("key2", new HashMap<String, String>());
+        Map<String, Map<String, String>> topologyMap = new HashMap<>();
+        topologyMap.put("key1", new HashMap<>());
+        topologyMap.put("key2", new HashMap<>());
         topoConf.put(Config.TOPOLOGY_BLOBSTORE_MAP, topologyMap);
 
         NimbusBlobStore nimbusBlobStoreMock = mock(NimbusBlobStore.class);
         when(nimbusBlobStoreMock.getBlobMeta("key1")).thenReturn(null);
         when(nimbusBlobStoreMock.getBlobMeta("key2")).thenThrow(new KeyNotFoundException());
 
-        Utils.validateTopologyBlobStoreMap(topoConf, nimbusBlobStoreMock);
+        assertThrows(InvalidTopologyException.class,
+            () -> Utils.validateTopologyBlobStoreMap(topoConf, nimbusBlobStoreMock));
     }
 
     @Test
     public void testValidateTopologyBlobStoreMap() throws InvalidTopologyException, AuthorizationException,
             KeyNotFoundException {
         Map<String, Object> topoConf = new HashMap<>();
-        Map<String, Map> topologyMap = new HashMap<>();
+        Map<String, Map<String, Object>> topologyMap = new HashMap<>();
         Map<String, Object> blobConf = new HashMap<>();
         blobConf.put("uncompress", false);
         topologyMap.put("key1", blobConf);
@@ -169,11 +161,10 @@ public class TestConfigValidate {
         Utils.validateTopologyBlobStoreMap(topoConf, nimbusBlobStoreMock);
     }
 
-    @Test(expected = InvalidTopologyException.class)
-    public void testValidateTopologyBlobStoreMapInvalidOption() throws InvalidTopologyException, AuthorizationException,
-            KeyNotFoundException {
+    @Test
+    public void testValidateTopologyBlobStoreMapInvalidOption() {
         Map<String, Object> topoConf = new HashMap<>();
-        Map<String, Map> topologyMap = new HashMap<>();
+        Map<String, Map<String, Object>> topologyMap = new HashMap<>();
         Map<String, Object> blobConf = new HashMap<>();
         blobConf.put("uncompress", "false");
         topologyMap.put("key1", blobConf);
@@ -182,35 +173,29 @@ public class TestConfigValidate {
 
         NimbusBlobStore nimbusBlobStoreMock = mock(NimbusBlobStore.class);
 
-        Utils.validateTopologyBlobStoreMap(topoConf, nimbusBlobStoreMock);
+        assertThrows(InvalidTopologyException.class,
+            () -> Utils.validateTopologyBlobStoreMap(topoConf, nimbusBlobStoreMock));
     }
 
     @Test
-    public void defaultYamlTest() throws InvocationTargetException, NoSuchMethodException, NoSuchFieldException, InstantiationException,
-        IllegalAccessException {
+    public void defaultYamlTest() {
         Map<String, Object> conf = Utils.readStormConfig();
         ConfigValidation.validateFields(conf);
     }
 
     @Test
-    public void testTopologyWorkersIsInteger() throws InvocationTargetException, NoSuchMethodException, NoSuchFieldException,
-        InstantiationException, IllegalAccessException {
-        Map<String, Object> conf = new HashMap<String, Object>();
+    public void testTopologyWorkersIsInteger() {
+        Map<String, Object> conf = new HashMap<>();
         conf.put(Config.TOPOLOGY_WORKERS, 42);
         ConfigValidation.validateFields(conf);
 
         conf.put(Config.TOPOLOGY_WORKERS, 3.14159);
-        try {
-            ConfigValidation.validateFields(conf);
-            Assert.fail("Expected Exception not Thrown");
-        } catch (IllegalArgumentException ex) {
-        }
+        assertThrows(IllegalArgumentException.class, () -> ConfigValidation.validateFields(conf));
     }
 
     @Test
-    public void testTopologyStatsSampleRateIsFloat() throws InvocationTargetException, NoSuchMethodException, NoSuchFieldException,
-        InstantiationException, IllegalAccessException {
-        Map<String, Object> conf = new HashMap<String, Object>();
+    public void testTopologyStatsSampleRateIsFloat() {
+        Map<String, Object> conf = new HashMap<>();
         conf.put(Config.TOPOLOGY_STATS_SAMPLE_RATE, 0.5);
         ConfigValidation.validateFields(conf);
         conf.put(Config.TOPOLOGY_STATS_SAMPLE_RATE, 10);
@@ -220,11 +205,10 @@ public class TestConfigValidate {
     }
 
     @Test
-    public void testWorkerChildoptsIsStringOrStringList() throws InvocationTargetException, NoSuchMethodException, NoSuchFieldException,
-        InstantiationException, IllegalAccessException {
-        Map<String, Object> conf = new HashMap<String, Object>();
-        Collection<Object> passCases = new LinkedList<Object>();
-        Collection<Object> failCases = new LinkedList<Object>();
+    public void testWorkerChildoptsIsStringOrStringList() {
+        Map<String, Object> conf = new HashMap<>();
+        Collection<Object> passCases = new LinkedList<>();
+        Collection<Object> failCases = new LinkedList<>();
 
         passCases.add(null);
         passCases.add("some string");
@@ -242,62 +226,54 @@ public class TestConfigValidate {
         }
 
         for (Object value : failCases) {
-            try {
-                conf.put(Config.WORKER_CHILDOPTS, value);
-                ConfigValidation.validateFields(conf);
-                Assert.fail("Expected Exception not Thrown for value: " + value);
-            } catch (IllegalArgumentException Ex) {
-            }
+            conf.put(Config.WORKER_CHILDOPTS, value);
+            assertThrows(IllegalArgumentException.class, () -> ConfigValidation.validateFields(conf));
         }
 
         //topology.worker.childopts validates
-        conf = new HashMap<String, Object>();
+        conf.clear();
         for (Object value : passCases) {
             conf.put(Config.TOPOLOGY_WORKER_CHILDOPTS, value);
             ConfigValidation.validateFields(conf);
         }
 
         for (Object value : failCases) {
-            try {
-                conf.put(Config.TOPOLOGY_WORKER_CHILDOPTS, value);
-                ConfigValidation.validateFields(conf);
-                Assert.fail("Expected Exception not Thrown for value: " + value);
-            } catch (IllegalArgumentException Ex) {
-            }
+            conf.put(Config.TOPOLOGY_WORKER_CHILDOPTS, value);
+            assertThrows(IllegalArgumentException.class, () -> ConfigValidation.validateFields(conf));
         }
     }
 
     @Test
     public void testValidity() {
-        Map<String, Object> conf = new HashMap<String, Object>();
+        Map<String, Object> conf = new HashMap<>();
         conf.put(Config.TOPOLOGY_DEBUG, true);
         conf.put("q", "asasdasd");
-        conf.put("aaa", new Integer("123"));
-        conf.put("bbb", new Long("456"));
-        List<Object> testList = new ArrayList<Object>();
+        conf.put("aaa", Integer.valueOf("123"));
+        conf.put("bbb", Long.valueOf("456"));
+        List<Object> testList = new ArrayList<>();
         testList.add(1);
         testList.add(2);
-        testList.add(new Integer("3"));
-        testList.add(new Long("4"));
+        testList.add(Integer.valueOf("3"));
+        testList.add(Long.valueOf("4"));
         testList.add(new Float("3"));
         testList.add(new Double("4"));
         testList.add(ImmutableList.of("asdf", 3));
         conf.put("eee", testList);
-        Assert.assertTrue(Utils.isValidConf(conf));
+        assertTrue(Utils.isValidConf(conf));
     }
 
     @Test
     public void testNonValidConfigChar() {
-        Map<String, Object> conf = new HashMap<String, Object>();
+        Map<String, Object> conf = new HashMap<>();
         conf.put("q", ImmutableList.of("asdf", 'c'));
-        Assert.assertFalse(Utils.isValidConf(conf));
+        assertFalse(Utils.isValidConf(conf));
     }
 
     @Test
     public void testNonValidConfigRandomObject() {
-        Map<String, Object> conf = new HashMap<String, Object>();
+        Map<String, Object> conf = new HashMap<>();
         conf.put("q", ImmutableList.of("asdf", new TestConfigValidate()));
-        Assert.assertFalse(Utils.isValidConf(conf));
+        assertFalse(Utils.isValidConf(conf));
     }
 
     @Test
@@ -305,13 +281,10 @@ public class TestConfigValidate {
         KryoRegValidator validator = new KryoRegValidator();
 
         // fail cases
-        Object[] failCases = { ImmutableMap.of("f", "g"), ImmutableList.of(1), Arrays.asList(ImmutableMap.of("a", 1)) };
+        Object[] failCases = { ImmutableMap.of("f", "g"), ImmutableList.of(1),
+            Collections.singletonList(ImmutableMap.of("a", 1))};
         for (Object value : failCases) {
-            try {
-                validator.validateField("test", value);
-                Assert.fail("Expected Exception not Thrown for value: " + value);
-            } catch (IllegalArgumentException e) {
-            }
+            assertThrows(IllegalArgumentException.class, () -> validator.validateField("test", value));
         }
 
         // pass cases
@@ -324,11 +297,7 @@ public class TestConfigValidate {
 
         Object[] failCases = { 42.42, 42, -33, 23423423423.0, -32, -1, -0.00001, 0, -0, "Forty-two" };
         for (Object value : failCases) {
-            try {
-                validator.validateField("test", value);
-                Assert.fail("Expected Exception not Thrown for value: " + value);
-            } catch (IllegalArgumentException Ex) {
-            }
+            assertThrows(IllegalArgumentException.class, () -> validator.validateField("test", value));
         }
 
         Object[] passCases = { 64, 4294967296.0, 1, null };
@@ -350,11 +319,7 @@ public class TestConfigValidate {
         Object[] failCases = { -1.0, -1, -0.01, 0.0, 0, "43", "string" };
 
         for (Object value : failCases) {
-            try {
-                validator.validateField("test", value);
-                Assert.fail("Expected Exception not Thrown for value: " + value);
-            } catch (IllegalArgumentException Ex) {
-            }
+            assertThrows(IllegalArgumentException.class, () -> validator.validateField("test", value));
         }
 
         Object[] passCasesIncludeZero = { null, 1.0, 0.01, 0, 2147483647, 0.0 };
@@ -366,11 +331,7 @@ public class TestConfigValidate {
         Object[] failCasesIncludeZero = { -1.0, -1, -0.01, "43", "string" };
 
         for (Object value : failCasesIncludeZero) {
-            try {
-                validator.validateField("test", true, value);
-                Assert.fail("Expected Exception not Thrown for value: " + value);
-            } catch (IllegalArgumentException Ex) {
-            }
+            assertThrows(IllegalArgumentException.class, () -> validator.validateField("test", true, value));
         }
     }
 
@@ -384,22 +345,18 @@ public class TestConfigValidate {
             validator.validateField("test", value);
         }
 
-        Object[] failCases = { 1.34, new Long(Integer.MAX_VALUE) + 1 };
+        Object[] failCases = { 1.34, (long) Integer.MAX_VALUE + 1 };
 
         for (Object value : failCases) {
-            try {
-                validator.validateField("test", value);
-                Assert.fail("Expected Exception not Thrown for value: " + value);
-            } catch (IllegalArgumentException Ex) {
-            }
+            assertThrows(IllegalArgumentException.class, () -> validator.validateField("test", value));
         }
     }
 
     @Test
     public void NoDuplicateInListValidator() {
         NoDuplicateInListValidator validator = new NoDuplicateInListValidator();
-        Collection<Object> passCases = new LinkedList<Object>();
-        Collection<Object> failCases = new LinkedList<Object>();
+        Collection<Object> passCases = new LinkedList<>();
+        Collection<Object> failCases = new LinkedList<>();
 
         Object[] passCase1 = { 1000, 0, -1000 };
         Object[] passCase2 = { "one", "two", "three" };
@@ -424,22 +381,17 @@ public class TestConfigValidate {
         failCases.add(Arrays.asList(failCase2));
         failCases.add(Arrays.asList(failCase3));
         for (Object value : failCases) {
-            try {
-                validator.validateField("test", value);
-                Assert.fail("Expected Exception not Thrown for value: " + value);
-            } catch (IllegalArgumentException Ex) {
-            }
+            assertThrows(IllegalArgumentException.class, () -> validator.validateField("test", value));
         }
     }
 
     @Test
     public void testListEntryTypeValidator() {
-        Collection<Object> testCases1 = new LinkedList<Object>();
-        Collection<Object> testCases2 = new LinkedList<Object>();
-        Collection<Object> testCases3 = new LinkedList<Object>();
+        Collection<Object> testCases1 = new LinkedList<>();
+        Collection<Object> testCases2 = new LinkedList<>();
+        Collection<Object> testCases3 = new LinkedList<>();
 
         Object[] testCase1 = { "one", "two", "three" };
-        ;
         Object[] testCase2 = { "three" };
         testCases1.add(Arrays.asList(testCase1));
         testCases1.add(Arrays.asList(testCase2));
@@ -449,11 +401,7 @@ public class TestConfigValidate {
         }
 
         for (Object value : testCases1) {
-            try {
-                ListEntryTypeValidator.validateField("test", Number.class, value);
-                Assert.fail("Expected Exception not Thrown for value: " + value);
-            } catch (IllegalArgumentException Ex) {
-            }
+            assertThrows(IllegalArgumentException.class, () -> ListEntryTypeValidator.validateField("test", Number.class, value));
         }
 
         Object[] testCase3 = { 1000, 0, 1000 };
@@ -463,11 +411,7 @@ public class TestConfigValidate {
         testCases2.add(Arrays.asList(testCase4));
         testCases2.add(Arrays.asList(testCase5));
         for (Object value : testCases2) {
-            try {
-                ListEntryTypeValidator.validateField("test", String.class, value);
-                Assert.fail("Expected Exception not Thrown for value: " + value);
-            } catch (IllegalArgumentException Ex) {
-            }
+            assertThrows(IllegalArgumentException.class, () -> ListEntryTypeValidator.validateField("test", String.class, value));
         }
         for (Object value : testCases2) {
             ListEntryTypeValidator.validateField("test", Number.class, value);
@@ -478,28 +422,19 @@ public class TestConfigValidate {
         testCases3.add(Arrays.asList(testCase6));
         testCases3.add(Arrays.asList(testCase7));
         for (Object value : testCases3) {
-            try {
-                ListEntryTypeValidator.validateField("test", String.class, value);
-                Assert.fail("Expected Exception not Thrown for value: " + value);
-            } catch (IllegalArgumentException Ex) {
-            }
+            assertThrows(IllegalArgumentException.class, () -> ListEntryTypeValidator.validateField("test", String.class, value));
         }
         for (Object value : testCases1) {
-            try {
-                ListEntryTypeValidator.validateField("test", Number.class, value);
-                Assert.fail("Expected Exception not Thrown for value: " + value);
-            } catch (IllegalArgumentException Ex) {
-            }
+            assertThrows(IllegalArgumentException.class, () -> ListEntryTypeValidator.validateField("test", Number.class, value));
         }
     }
 
     @Test
-    public void testMapEntryTypeAnnotation() throws InvocationTargetException, NoSuchMethodException, NoSuchFieldException,
-        InstantiationException, IllegalAccessException {
+    public void testMapEntryTypeAnnotation() {
         TestConfig config = new TestConfig();
-        Collection<Object> passCases = new LinkedList<Object>();
-        Collection<Object> failCases = new LinkedList<Object>();
-        Map<Object, Object> passCase1 = new HashMap<Object, Object>();
+        Collection<Object> passCases = new LinkedList<>();
+        Collection<Object> failCases = new LinkedList<>();
+        Map<Object, Object> passCase1 = new HashMap<>();
         passCase1.put("aaa", 5);
         passCase1.put("bbb", 6);
         passCase1.put("ccc", 7);
@@ -508,14 +443,14 @@ public class TestConfigValidate {
 
         for (Object value : passCases) {
             config.put(TestConfig.TEST_MAP_CONFIG, value);
-            ConfigValidation.validateFields(config, Arrays.asList(TestConfig.class));
+            ConfigValidation.validateFields(config, Collections.singletonList(TestConfig.class));
         }
 
-        Map<Object, Object> failCase1 = new HashMap<Object, Object>();
+        Map<Object, Object> failCase1 = new HashMap<>();
         failCase1.put("aaa", 5);
         failCase1.put(5, 6);
         failCase1.put("ccc", 7);
-        Map<Object, Object> failCase2 = new HashMap<Object, Object>();
+        Map<Object, Object> failCase2 = new HashMap<>();
         failCase2.put("aaa", "str");
         failCase2.put("bbb", 6);
         failCase2.put("ccc", 7);
@@ -523,22 +458,17 @@ public class TestConfigValidate {
         failCases.add(failCase1);
         failCases.add(failCase2);
         for (Object value : failCases) {
-            try {
-                config.put(TestConfig.TEST_MAP_CONFIG, value);
-                ConfigValidation.validateFields(config, Arrays.asList(TestConfig.class));
-                Assert.fail("Expected Exception not Thrown for value: " + value);
-            } catch (IllegalArgumentException Ex) {
-            }
+            config.put(TestConfig.TEST_MAP_CONFIG, value);
+            assertThrows(IllegalArgumentException.class, () -> ConfigValidation.validateFields(config, Collections.singletonList(TestConfig.class)));
         }
     }
 
     @Test
-    public void testMapEntryCustomAnnotation() throws InvocationTargetException, NoSuchMethodException, NoSuchFieldException,
-        InstantiationException, IllegalAccessException {
+    public void testMapEntryCustomAnnotation() {
         TestConfig config = new TestConfig();
-        Collection<Object> passCases = new LinkedList<Object>();
-        Collection<Object> failCases = new LinkedList<Object>();
-        Map<Object, Object> passCase1 = new HashMap<Object, Object>();
+        Collection<Object> passCases = new LinkedList<>();
+        Collection<Object> failCases = new LinkedList<>();
+        Map<Object, Object> passCase1 = new HashMap<>();
         passCase1.put("aaa", 5);
         passCase1.put("bbb", 100);
         passCase1.put("ccc", Integer.MAX_VALUE);
@@ -547,22 +477,22 @@ public class TestConfigValidate {
 
         for (Object value : passCases) {
             config.put(TestConfig.TEST_MAP_CONFIG_2, value);
-            ConfigValidation.validateFields(config, Arrays.asList(TestConfig.class));
+            ConfigValidation.validateFields(config, Collections.singletonList(TestConfig.class));
         }
 
-        Map<Object, Object> failCase1 = new HashMap<Object, Object>();
+        Map<Object, Object> failCase1 = new HashMap<>();
         failCase1.put("aaa", 5);
         failCase1.put(5, 6);
         failCase1.put("ccc", 7);
-        Map<Object, Object> failCase2 = new HashMap<Object, Object>();
+        Map<Object, Object> failCase2 = new HashMap<>();
         failCase2.put("aaa", "str");
         failCase2.put("bbb", 6);
         failCase2.put("ccc", 7);
-        Map<Object, Object> failCase3 = new HashMap<Object, Object>();
+        Map<Object, Object> failCase3 = new HashMap<>();
         failCase3.put("aaa", -1);
         failCase3.put("bbb", 6);
         failCase3.put("ccc", 7);
-        Map<Object, Object> failCase4 = new HashMap<Object, Object>();
+        Map<Object, Object> failCase4 = new HashMap<>();
         failCase4.put("aaa", 1);
         failCase4.put("bbb", 6);
         failCase4.put("ccc", 7.4);
@@ -572,20 +502,16 @@ public class TestConfigValidate {
         failCases.add(failCase3);
         failCases.add(failCase4);
         for (Object value : failCases) {
-            try {
-                config.put(TestConfig.TEST_MAP_CONFIG_2, value);
-                ConfigValidation.validateFields(config, Arrays.asList(TestConfig.class));
-                Assert.fail("Expected Exception not Thrown for value: " + value);
-            } catch (IllegalArgumentException Ex) {
-            }
+            config.put(TestConfig.TEST_MAP_CONFIG_2, value);
+            assertThrows(IllegalArgumentException.class, () -> ConfigValidation.validateFields(config, Collections.singletonList(TestConfig.class)));
         }
     }
 
     @Test
     public void testExactlyOneOfCustomAnnotation() {
         TestConfig config = new TestConfig();
-        Collection<Object> passCases = new LinkedList<Object>();
-        Collection<Object> failCases = new LinkedList<Object>();
+        Collection<Object> passCases = new LinkedList<>();
+        Collection<Object> failCases = new LinkedList<>();
 
         List<Object> passCaseListOfList = new ArrayList<>();
         passCaseListOfList.add(Arrays.asList("comp1", "comp2"));
@@ -638,7 +564,7 @@ public class TestConfigValidate {
 
         for (Object value : passCases) {
             config.put(TestConfig.TEST_MAP_CONFIG_9, value);
-            ConfigValidation.validateFields(config, Arrays.asList(TestConfig.class));
+            ConfigValidation.validateFields(config, Collections.singletonList(TestConfig.class));
         }
 
         List<Object> failCaseList = new ArrayList<>();
@@ -701,21 +627,16 @@ public class TestConfigValidate {
         failCases.add(null);
 
         for (Object value : failCases) {
-            try {
-                config.put(TestConfig.TEST_MAP_CONFIG_9, value);
-                ConfigValidation.validateFields(config, Arrays.asList(TestConfig.class));
-                Assert.fail("Expected Exception not Thrown for value: " + value);
-            } catch (IllegalArgumentException Ex) {
-            }
+            config.put(TestConfig.TEST_MAP_CONFIG_9, value);
+            assertThrows(IllegalArgumentException.class, () -> ConfigValidation.validateFields(config, Collections.singletonList(TestConfig.class)));
         }
     }
 
     @Test
-    public void testListEntryTypeAnnotation() throws InvocationTargetException, NoSuchMethodException, NoSuchFieldException,
-        InstantiationException, IllegalAccessException {
+    public void testListEntryTypeAnnotation() {
         TestConfig config = new TestConfig();
-        Collection<Object> passCases = new LinkedList<Object>();
-        Collection<Object> failCases = new LinkedList<Object>();
+        Collection<Object> passCases = new LinkedList<>();
+        Collection<Object> failCases = new LinkedList<>();
         Object[] passCase1 = { 1, 5.0, -0.01, 0, Integer.MAX_VALUE, Double.MIN_VALUE };
         Object[] passCase2 = { 1 };
         passCases.add(Arrays.asList(passCase1));
@@ -723,7 +644,7 @@ public class TestConfigValidate {
 
         for (Object value : passCases) {
             config.put(TestConfig.TEST_MAP_CONFIG_3, value);
-            ConfigValidation.validateFields(config, Arrays.asList(TestConfig.class));
+            ConfigValidation.validateFields(config, Collections.singletonList(TestConfig.class));
         }
 
         Object[] failCase1 = { 1, 5.0, -0.01, 0, "aaa" };
@@ -734,21 +655,16 @@ public class TestConfigValidate {
         failCases.add("b");
         failCases.add(null);
         for (Object value : failCases) {
-            try {
-                config.put(TestConfig.TEST_MAP_CONFIG_3, value);
-                ConfigValidation.validateFields(config, Arrays.asList(TestConfig.class));
-                Assert.fail("Expected Exception not Thrown for value: " + value);
-            } catch (IllegalArgumentException Ex) {
-            }
+            config.put(TestConfig.TEST_MAP_CONFIG_3, value);
+            assertThrows(IllegalArgumentException.class, () -> ConfigValidation.validateFields(config, Collections.singletonList(TestConfig.class)));
         }
     }
 
     @Test
-    public void testListEntryCustomAnnotation() throws InvocationTargetException, NoSuchMethodException, NoSuchFieldException,
-        InstantiationException, IllegalAccessException {
+    public void testListEntryCustomAnnotation() {
         TestConfig config = new TestConfig();
-        Collection<Object> passCases = new LinkedList<Object>();
-        Collection<Object> failCases = new LinkedList<Object>();
+        Collection<Object> passCases = new LinkedList<>();
+        Collection<Object> failCases = new LinkedList<>();
         Object[] passCase1 = { 1, 5.0, 0.01, Double.MAX_VALUE };
         Object[] passCase2 = { 1 };
         passCases.add(Arrays.asList(passCase1));
@@ -756,7 +672,7 @@ public class TestConfigValidate {
 
         for (Object value : passCases) {
             config.put(TestConfig.TEST_MAP_CONFIG_4, value);
-            ConfigValidation.validateFields(config, Arrays.asList(TestConfig.class));
+            ConfigValidation.validateFields(config, Collections.singletonList(TestConfig.class));
         }
 
         Object[] failCase1 = { 1, 5.0, -0.01, 3.0 };
@@ -773,46 +689,36 @@ public class TestConfigValidate {
         failCases.add(1);
         failCases.add("b");
         for (Object value : failCases) {
-            try {
-                config.put(TestConfig.TEST_MAP_CONFIG_4, value);
-                ConfigValidation.validateFields(config, Arrays.asList(TestConfig.class));
-                Assert.fail("Expected Exception not Thrown for value: " + value);
-            } catch (IllegalArgumentException Ex) {
-            }
+            config.put(TestConfig.TEST_MAP_CONFIG_4, value);
+            assertThrows(IllegalArgumentException.class, () -> ConfigValidation.validateFields(config, Collections.singletonList(TestConfig.class)));
         }
     }
 
     @Test
-    public void TestAcceptedStrings() throws InvocationTargetException, NoSuchMethodException, NoSuchFieldException, InstantiationException,
-        IllegalAccessException {
+    public void TestAcceptedStrings() {
         TestConfig config = new TestConfig();
         String[] passCases = { "aaa", "bbb", "ccc" };
 
         for (Object value : passCases) {
             config.put(TestConfig.TEST_MAP_CONFIG_5, value);
-            ConfigValidation.validateFields(config, Arrays.asList(TestConfig.class));
+            ConfigValidation.validateFields(config, Collections.singletonList(TestConfig.class));
         }
 
         String[] failCases = { "aa", "bb", "cc", "abc", "a", "b", "c", "" };
         for (Object value : failCases) {
-            try {
-                config.put(TestConfig.TEST_MAP_CONFIG_5, value);
-                ConfigValidation.validateFields(config, Arrays.asList(TestConfig.class));
-                Assert.fail("Expected Exception not Thrown for value: " + value);
-            } catch (IllegalArgumentException Ex) {
-            }
+           config.put(TestConfig.TEST_MAP_CONFIG_5, value);
+           assertThrows(IllegalArgumentException.class, () -> ConfigValidation.validateFields(config, Collections.singletonList(TestConfig.class)));
         }
     }
 
     @Test
-    public void TestImpersonationAclUserEntryValidator() throws InvocationTargetException, NoSuchMethodException, NoSuchFieldException,
-        InstantiationException, IllegalAccessException {
+    public void TestImpersonationAclUserEntryValidator() {
         TestConfig config = new TestConfig();
-        Collection<Object> passCases = new LinkedList<Object>();
-        Collection<Object> failCases = new LinkedList<Object>();
+        Collection<Object> passCases = new LinkedList<>();
+        Collection<Object> failCases = new LinkedList<>();
 
-        Map<String, Map<String, List<String>>> passCase1 = new HashMap<String, Map<String, List<String>>>();
-        Map<String, List<String>> passCase1_hostsAndGroups = new HashMap<String, List<String>>();
+        Map<String, Map<String, List<String>>> passCase1 = new HashMap<>();
+        Map<String, List<String>> passCase1_hostsAndGroups = new HashMap<>();
         String[] hosts = { "host.1", "host.2", "host.3" };
         passCase1_hostsAndGroups.put("hosts", Arrays.asList(hosts));
         String[] groups = { "group.1", "group.2", "group.3" };
@@ -822,18 +728,17 @@ public class TestConfigValidate {
 
         for (Object value : passCases) {
             config.put(TestConfig.TEST_MAP_CONFIG_6, value);
-            ConfigValidation.validateFields(config, Arrays.asList(TestConfig.class));
+            ConfigValidation.validateFields(config, Collections.singletonList(TestConfig.class));
         }
 
-        Map<String, Map<String, List<String>>> failCase1 = new HashMap<String, Map<String, List<String>>>();
-        Map<String, List<String>> failCase1_hostsAndGroups = new HashMap<String, List<String>>();
-        String[] failhosts = { "host.1", "host.2", "host.3" };
+        Map<String, Map<String, List<String>>> failCase1 = new HashMap<>();
+        Map<String, List<String>> failCase1_hostsAndGroups = new HashMap<>();
         failCase1_hostsAndGroups.put("hosts", Arrays.asList(hosts));
         failCase1.put("jerry", failCase1_hostsAndGroups);
 
 
-        Map<String, Map<String, List<String>>> failCase2 = new HashMap<String, Map<String, List<String>>>();
-        Map<String, List<String>> failCase2_hostsAndGroups = new HashMap<String, List<String>>();
+        Map<String, Map<String, List<String>>> failCase2 = new HashMap<>();
+        Map<String, List<String>> failCase2_hostsAndGroups = new HashMap<>();
         String[] failgroups = { "group.1", "group.2", "group.3" };
         failCase2_hostsAndGroups.put("groups", Arrays.asList(groups));
         failCase2.put("jerry", failCase2_hostsAndGroups);
@@ -844,24 +749,20 @@ public class TestConfigValidate {
         failCases.add(5);
 
         for (Object value : failCases) {
-            try {
-                config.put(TestConfig.TEST_MAP_CONFIG_6, value);
-                ConfigValidation.validateFields(config, Arrays.asList(TestConfig.class));
-                Assert.fail("Expected Exception not Thrown for value: " + value);
-            } catch (IllegalArgumentException Ex) {
-            }
+            config.put(TestConfig.TEST_MAP_CONFIG_6, value);
+            assertThrows(IllegalArgumentException.class, () -> ConfigValidation.validateFields(config, Collections.singletonList(TestConfig.class)));
         }
     }
 
     @Test
     public void TestResourceAwareSchedulerUserPool() {
         TestConfig config = new TestConfig();
-        Collection<Object> failCases = new LinkedList<Object>();
+        Collection<Object> failCases = new LinkedList<>();
 
-        Map<String, Map<String, Integer>> passCase1 = new HashMap<String, Map<String, Integer>>();
-        passCase1.put("jerry", new HashMap<String, Integer>());
-        passCase1.put("bobby", new HashMap<String, Integer>());
-        passCase1.put("derek", new HashMap<String, Integer>());
+        Map<String, Map<String, Integer>> passCase1 = new HashMap<>();
+        passCase1.put("jerry", new HashMap<>());
+        passCase1.put("bobby", new HashMap<>());
+        passCase1.put("derek", new HashMap<>());
 
         passCase1.get("jerry").put("cpu", 10000);
         passCase1.get("jerry").put("memory", 20148);
@@ -870,13 +771,13 @@ public class TestConfigValidate {
         passCase1.get("derek").put("cpu", 30000);
         passCase1.get("derek").put("memory", 60148);
 
-        config.put(TestConfig.TEST_MAP_CONFIG_7, (Object) passCase1);
-        ConfigValidation.validateFields(config, Arrays.asList(TestConfig.class));
+        config.put(TestConfig.TEST_MAP_CONFIG_7, passCase1);
+        ConfigValidation.validateFields(config, Collections.singletonList(TestConfig.class));
 
-        Map<String, Map<String, Integer>> failCase1 = new HashMap<String, Map<String, Integer>>();
-        failCase1.put("jerry", new HashMap<String, Integer>());
-        failCase1.put("bobby", new HashMap<String, Integer>());
-        failCase1.put("derek", new HashMap<String, Integer>());
+        Map<String, Map<String, Integer>> failCase1 = new HashMap<>();
+        failCase1.put("jerry", new HashMap<>());
+        failCase1.put("bobby", new HashMap<>());
+        failCase1.put("derek", new HashMap<>());
 
         failCase1.get("jerry").put("cpu", 10000);
         failCase1.get("jerry").put("memory", 20148);
@@ -885,11 +786,11 @@ public class TestConfigValidate {
         //this will fail the test since user derek does not have an entry for memory
         failCase1.get("derek").put("cpu", 30000);
 
-        Map<String, Map<String, Integer>> failCase2 = new HashMap<String, Map<String, Integer>>();
+        Map<String, Map<String, Integer>> failCase2 = new HashMap<>();
         //this will fail since jerry doesn't have either cpu or memory entries
-        failCase2.put("jerry", new HashMap<String, Integer>());
-        failCase2.put("bobby", new HashMap<String, Integer>());
-        failCase2.put("derek", new HashMap<String, Integer>());
+        failCase2.put("jerry", new HashMap<>());
+        failCase2.put("bobby", new HashMap<>());
+        failCase2.put("derek", new HashMap<>());
         failCase2.get("bobby").put("cpu", 20000);
         failCase2.get("bobby").put("memory", 40148);
         failCase2.get("derek").put("cpu", 30000);
@@ -899,42 +800,34 @@ public class TestConfigValidate {
         failCases.add(failCase2);
 
         for (Object value : failCases) {
-            try {
-                config.put(TestConfig.TEST_MAP_CONFIG_7, value);
-                ConfigValidation.validateFields(config, Arrays.asList(TestConfig.class));
-                Assert.fail("Expected Exception not Thrown for value: " + value);
-            } catch (IllegalArgumentException Ex) {
-            }
+            config.put(TestConfig.TEST_MAP_CONFIG_7, value);
+            assertThrows(IllegalArgumentException.class, () -> ConfigValidation.validateFields(config, Collections.singletonList(TestConfig.class)));
         }
     }
 
     @Test
     public void TestImplementsClassValidator() {
         TestConfig config = new TestConfig();
-        Collection<Object> passCases = new LinkedList<Object>();
-        Collection<Object> failCases = new LinkedList<Object>();
+        Collection<Object> passCases = new LinkedList<>();
+        Collection<Object> failCases = new LinkedList<>();
 
         passCases.add("org.apache.storm.networktopography.DefaultRackDNSToSwitchMapping");
 
         for (Object value : passCases) {
             config.put(TestConfig.TEST_MAP_CONFIG_8, value);
-            ConfigValidation.validateFields(config, Arrays.asList(TestConfig.class));
+            ConfigValidation.validateFields(config, Collections.singletonList(TestConfig.class));
         }
         //will fail since org.apache.storm.nimbus.NimbusInfo doesn't implement or extend org.apache.storm.networktopography
         // .DNSToSwitchMapping
         failCases.add("org.apache.storm.nimbus.NimbusInfo");
         failCases.add(null);
         for (Object value : failCases) {
-            try {
-                config.put(TestConfig.TEST_MAP_CONFIG_8, value);
-                ConfigValidation.validateFields(config, Arrays.asList(TestConfig.class));
-                Assert.fail("Expected Exception not Thrown for value: " + value);
-            } catch (IllegalArgumentException Ex) {
-            }
+            config.put(TestConfig.TEST_MAP_CONFIG_8, value);
+            assertThrows(IllegalArgumentException.class, () -> ConfigValidation.validateFields(config, Collections.singletonList(TestConfig.class)));
         }
     }
 
-    public class TestConfig extends HashMap<String, Object> {
+    public static class TestConfig extends HashMap<String, Object> {
         @IsMapEntryType(keyType = String.class, valueType = Integer.class)
         public static final String TEST_MAP_CONFIG = "test.map.config";
 
